fixed spacing

--- a/src/components/ContentAccordion/ContentAccordion.css
+++ b/src/components/ContentAccordion/ContentAccordion.css
@@ -7,12 +7,8 @@
 
 @media only screen and (max-width: 400px) {
   /* BEGIN: make the currently toggled project take up the whole view on mobile */
-  .ContentAccordion__title {
-    max-height: 10vh;
-  }
-
   .ContentAccordion__expanded-container {
-    height: 90vh;
+    min-height: 90vh !important;
   }
   /* END: make the currently toggled project take up the whole view on mobile */
 
